@@ -18,6 +18,7 @@ Open Vehicle Monitor System v3 - Change log
                          - Webserver: command streaming, auto reload, shell pageup/down
                          - Ota: If wifi network is available, try to determine available firmware version on server
                          - Webserver: added DNS config, replaced modem with network status
+                         - Module: Provide a 'module factory reset' command to erase config store
 
 2018-03-05 MWJ  3.0.991  OTA release support OTA updates over HTTP
                          - Update ovms_module to use new API for per-task heap info.
